--- a/data/build.gradle
+++ b/data/build.gradle
@@ -22,12 +22,18 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 
+
+def gsonVersion = "2.8.5"
 def rxJavaVersion = "2.0.2"
 def rxAndroidVersion = "2.0.1"
-def gsonVersion = "2.8.5"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -41,4 +47,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(path: ':domain')
 }
