--- a/data/build.gradle
+++ b/data/build.gradle
@@ -44,7 +44,12 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
 
+    testImplementation 'org.mockito:mockito-core:2.7.22'
+
     testImplementation 'junit:junit:4.12'
+
+    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':domain')
