--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.speakliz.chatcleanarquitecture"
+        applicationId "com.juanchango.presentation"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
