--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
