--- a/data/build.gradle
+++ b/data/build.gradle
@@ -52,6 +52,11 @@ dependencies {
 
     androidTestImplementation 'org.mockito:mockito-android:2.7.22'
 
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':domain')
