--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -12,6 +12,10 @@ dependencies {
     //Arrow precondition tools
     implementation 'com.fernandocejas:arrow:1.0.0'
 
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+
 }
 
 sourceCompatibility = "7"
