--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     implementation "com.google.code.gson:gson:${gsonVersion}"
+
+    // JavaRx
     implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
 
