--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -24,12 +24,21 @@ android {
 
 }
 
+def rxJavaVersion = "2.0.2"
+def rxAndroidVersion = "2.0.1"
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation project(':domain')
+    implementation project(':data')
+
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -37,13 +46,15 @@ dependencies {
 
     //Dagger
     implementation 'com.google.dagger:dagger:2.13'
-    annotationProcessor'com.google.dagger:dagger-compiler:2.8'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
     //Butter knife
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
-
+    // JavaRx
+    implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
 
     // Timber logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
