added item fro recycler view on PostList

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -58,4 +58,5 @@ dependencies {
 
     // Timber logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
