--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name=".view.activity.PostListActivity" >
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +23,11 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".view.activity.PostListActivity" />
         <activity android:name=".view.activity.PostDetailsActivity" />
 
-        <activity android:name=".view.activity.MainActivity"/>
+
 
     </application>
 
